--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="he">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>המבחן הבא</title>
-  </head>
-  <body
-    style="text-align: center; font-family: Arial, sans-serif; direction: rtl"
-  >
+</head>
+<body style="text-align: center; font-family: Arial, sans-serif; direction: rtl;">
     <h1>נפלתם בפח!</h1>
-    <p>
-      הברקוד ששלחתי היה מזויף. זה תרגול שמטרתו להראות כמה חשוב לבדוק קישורים או
-      ברקודים לפני שלוחצים.
-    </p>
+    <p style="color: red; font-size: 18px;">!!! Your device got hacked !!! <br>
+    !!! Your device got hacked !!! <br>
+    !!! Your device got hacked !!! <br>
+    !!! Your device got hacked !!! <br></p>
+    <p>הברקוד ששלחתי היה מזויף. 
+    זה תרגול שמטרתו להראות כמה חשוב לבדוק קישורים או ברקודים לפני שלוחצים.</p>
     <p>זכרו תמיד לוודא את מקור הקישור או ברקוד!</p>
-  </body>
+</body>
 </html>
