--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>המבחן הבא</title>
+    <style>
+        @keyframes blink {
+            0% { opacity: 1; }
+            50% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+    </style>
 </head>
 <body style="text-align: center; font-family: Arial, sans-serif; direction: rtl;">
     <h1>נפלתם בפח!</h1>
-    <p style="color: red; font-size: 18px;">!!! Your device got hacked !!! <br>
+    <p style="color: red; font-size: 18px; animation: blink 1s infinite;">
     !!! Your device got hacked !!! <br>
     !!! Your device got hacked !!! <br>
-    !!! Your device got hacked !!! <br></p>
+    !!! Your device got hacked !!! <br>
+    !!! Your device got hacked !!! <br>
+    </p>
+    <img src="warning.jpeg" alt="אזהרה" style="max-width: 50%; height: auto; margin: 20px auto;">
     <p>הברקוד ששלחתי היה מזויף. 
     זה תרגול שמטרתו להראות כמה חשוב לבדוק קישורים או ברקודים לפני שלוחצים.</p>
     <p>זכרו תמיד לוודא את מקור הקישור או ברקוד!</p>
